legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr56989.c-5.4.0-2.out.txt
pr56989.c: In function ‘f’:
pr56989.c:11:10: error: void value not ignored as it ought to be
       || voidf () < 0)  
          ^
pr56989.c:14:7: error: void value not ignored as it ought to be
   if (voidf () < 0  
       ^
